--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.GalleryFragment">
+    android:background="@drawable/back"
+  >
+
     <LinearLayout
         android:id="@+id/ll"
         android:layout_width="match_parent"
@@ -42,7 +43,7 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/animal"
+        android:id="@+id/extra"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -51,10 +52,10 @@
         android:layout_marginStart="160dp"
         android:layout_marginLeft="150dp"
         android:layout_marginTop="100dp"
-        android:src="@drawable/elephant" />
+        android:src="@drawable/architecture" />
 
     <ImageView
-        android:id="@+id/animal2"
+        android:id="@+id/extra2"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -63,10 +64,10 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="100dp"
-        android:src="@drawable/cat" />
+        android:src="@drawable/camping" />
 
     <ImageView
-        android:id="@+id/animal3"
+        android:id="@+id/extra3"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -75,10 +76,10 @@
         android:layout_marginStart="290dp"
         android:layout_marginLeft="277dp"
         android:layout_marginTop="100dp"
-        android:src="@drawable/whale" />
+        android:src="@drawable/landscape" />
 
     <ImageView
-        android:id="@+id/animal4"
+        android:id="@+id/extra4"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -87,10 +88,10 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="7dp"
         android:layout_marginTop="280dp"
-        android:src="@drawable/sheep" />
+        android:src="@drawable/fountain" />
 
     <ImageView
-        android:id="@+id/animal5"
+        android:id="@+id/extra5"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -99,10 +100,10 @@
         android:layout_marginStart="160dp"
         android:layout_marginLeft="156dp"
         android:layout_marginTop="280dp"
-        android:src="@drawable/octopus" />
+        android:src="@drawable/mushroom" />
 
     <ImageView
-        android:id="@+id/animal6"
+        android:id="@+id/extra6"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -111,10 +112,10 @@
         android:layout_marginStart="290dp"
         android:layout_marginLeft="273dp"
         android:layout_marginTop="280dp"
-        android:src="@drawable/flamingo" />
+        android:src="@drawable/property" />
 
     <ImageView
-        android:id="@+id/animal7"
+        android:id="@+id/extra7"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -123,10 +124,10 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="470dp"
-        android:src="@drawable/giraffe" />
+        android:src="@drawable/fence" />
 
     <ImageView
-        android:id="@+id/animal8"
+        android:id="@+id/extra8"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -135,21 +136,8 @@
         android:layout_marginStart="160dp"
         android:layout_marginLeft="150dp"
         android:layout_marginTop="470dp"
-        android:src="@drawable/squirrel" />
+        android:src="@drawable/house" />
 
-
-
-    <ImageView
-        android:id="@+id/animal9"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="290dp"
-        android:layout_marginLeft="286dp"
-        android:layout_marginTop="470dp"
-        android:src="@drawable/hen" />
 
     <TextView
         android:id="@+id/textView10"
@@ -161,7 +149,7 @@
         android:layout_marginStart="53dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="210dp"
-        android:text="0:45"
+        android:text="1:00"
         android:textColor="#000000"
         android:textSize="20dp" />
 
@@ -175,7 +163,7 @@
         android:layout_marginStart="190dp"
         android:layout_marginLeft="178dp"
         android:layout_marginTop="210dp"
-        android:text="1:00"
+        android:text="0:30"
         android:textColor="#000000"
         android:textSize="20dp" />
 
@@ -189,7 +177,7 @@
         android:layout_marginStart="320dp"
         android:layout_marginLeft="305dp"
         android:layout_marginTop="210dp"
-        android:text="0:30"
+        android:text="3:00"
         android:textColor="#000000"
         android:textSize="20dp" />
 
@@ -203,7 +191,7 @@
         android:layout_marginStart="63dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="395dp"
-        android:text="0:50"
+        android:text="1:30"
         android:textColor="#000000"
         android:textSize="20dp" />
 
@@ -217,7 +205,7 @@
         android:layout_marginStart="193dp"
         android:layout_marginLeft="178dp"
         android:layout_marginTop="395dp"
-        android:text="0:45"
+        android:text="2:00"
         android:textColor="#000000"
         android:textSize="20dp" />
 
@@ -231,7 +219,7 @@
         android:layout_marginStart="325dp"
         android:layout_marginLeft="305dp"
         android:layout_marginTop="395dp"
-        android:text="1:00"
+        android:text="1:40"
         android:textColor="#000000"
         android:textSize="20dp" />
 
@@ -245,7 +233,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="585dp"
-        android:text="0:55"
+        android:text="0:20"
         android:textColor="#000000"
         android:textSize="20dp" />
 
@@ -259,22 +247,11 @@
         android:layout_marginStart="185dp"
         android:layout_marginLeft="178dp"
         android:layout_marginTop="585dp"
-        android:text="1:00"
+        android:text="1:10"
         android:textColor="#000000"
         android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="325dp"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="585dp"
-        android:text="0:20"
-        android:textColor="#000000"
-        android:textSize="20dp" />
+
+
 
 </RelativeLayout>
