--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,16 @@
         android:name="com.example.yeah.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_second"
+        android:name="com.example.yeah.ui.gallery.Second"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_second" />
+
+    <fragment
+        android:id="@+id/nav_third"
+        android:name="com.example.yeah.ui.gallery.Third"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_third" />
 </navigation>
